<resources>
    <string name="app_name">Montaigne - Ensaios Práticos</string>

    <string name="action_settings">Settings</string>

    <string name="not_implemented">Não implementado</string>
    <string name="msg_snackbar_campos_vazios">Campos obrigatórios ainda precisam ser preenchidos!</string>

    <!-- Strings used for menu  -->
    <string name="action_help">Ajuda</string>
    <string name="action_infor">Sobre</string>
    <string name="menu_item_add_spt_projeto">Adicionar projeto SPT</string>
    <string name="menu_item_projetospt_novo_furo">Novo furo</string>
    <string name="menu_item_projetospt_apagar_furo">Apagar furo</string>
    <string name="menu_item_generate_report">Gerar relatório SPT</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings da tela HOME-->
    <string name="title_Filtros_Ensaios">Filtro de Ensaios</string>
    <string name="title_Meus_Projetos">Meus Projetos</string>

    <!-- Strings da tela ENSAIO-->
    <string name="spt_ensaio_title">Amostra de ensaio SPT</string>

    <string name="spt_projeto_title">Sondagens:</string>

    <!-- Strings da tela FURO-->


    <!-- Strings da tela Carimbo Project -->
    <string name="msg_carimbo_automátizado">O carimbo projeto é realizado para todos os furos, contendo informações gerais que não serão alteradas nos demais furos.</string>
    <string name="error_campo_obrigatorio">Obrigatório*</string>
    <string name="btn_capturar_endereco">Determinar endereço via localização do dispositivo</string>

    <string name="registration_projectName_hint">Nome do projeto</string>
    <string name="registration_tecnico_hint">Técnico</string>
    <string name="registration_empresa_hint">Empresa responsável</string>
    <string name="registration_contato_hint">Contato</string>
    <string name="registration_cliente_hint">Cliente</string>
    <string name="registration_local_obra_hint">Local da obra</string>
    <string name="registration_quantidade_furos_hint">Número de furos</string>
    <string name="registration_data_inicio_hint">Data de inicio</string>
    <string name="registration_referencia_nivel_hint">Descrição da referência de nivel</string>
    <string name="registration_altura_referencia_nivel_hint">Altura da referência de nível</string>
    <string name="registration_coordenadas_hint">Endereço do projeto</string>

    <!-- Strings da tela Carimbo Furo-->
    <string name="furo_action_bar_title">Furo SP-0</string>
    <string name="registration_Data_inicio_furo">Data de inicio:</string>
    <string name="hint_date">MM/DD/YYYY</string>
    <string name="registration_nivel_furo">Nivel do Furo N:</string>
    <string name="registration_hint_nivel_furo">Ex: 15m</string>
    <string name="title_button_Coordenadas_furo">Coordernadas do Furo N:</string>
    <string name="btn_capturar_location">Capturar Localização</string>
    <string name="btn_start_furo">Iniciar furo</string>



    <!-- Strings da tela Adpter_home_projetos-->


    <!-- Strings da tela Adpter_home_filtro_Ensaios-->


    <!-- Strings dos butões inferior das telas -->
    <string name="btn_navigate_carimbo_projeto">Novo Furo</string>
    <string name="btn_navigate_carimbo_furo">Inicar ensaio</string>
    <string name="btn_navigate_projeto">Carimbo do projeto</string>
    <string name="btn_navigate_furo">Carimbo do furo</string>
    <string name="btn_navigate_ensaio">Próxima camada</string>
    <string name="btn_finish_ensaio">Suspender ensaio</string>

    <!--    Categorias de projetos-->
    <string name="categoria_spt">SPT</string>
    <string name="categoria_granulometria">Granulometria</string>

    <!--    Strings de adapters-->
    <string name="adapter_projetos_savlos_data">Inicio do Projeto: </string>
    <string name="adapter_projetos_savlos_projeto_label">Projeto  de</string>
    <string name="adapter_amostra_name">"Amostra "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <!-- Strings Granulometria -->


    <!-- Strings fragment indentificar agregados -->

    <string name="registration_agregados">Insira a massa retida nas peneiras selecionadas da amostra :</string>

    <!-- Strings adpter dados agregados para substituir no adpter text -->

    <string name="registration_substituir_dados_agregados">Substitua requisito </string>   //TO DO - Criar strings e hints com lista dos dados necessários para o adpter
    <string name="registration_name_agregado">Insira o nome do ensaio:</string>
    <string name="registration_massa_agregado">Insira a massa do agregado a ser analisado:</string>
    <string name="registration_massa_amostra_1">Indentificação da amostra 1:</string>
    <string name="registration_massa_amostra_2">Indentificação da amostra 2:</string>
    <string name="registration_data_início">Data do início:</string>

    <!-- Strings adpter dados agregados para substituir no hint  -->
    <string name="registration_hint_name_agregado">Ex:Areia concreto</string>
    <string name="registration_hint_massa_agregado">Ex:1000g</string>
    <string name="registration_hint_massa_amostra_1">Ex:Amostra de areia 1</string>
    <string name="registration_hint_massa_amostra_2">Ex:Amostra de areia 2</string>
    <string name="registration_hint_data_início">MM/DD/YYYY</string>

</resources>