<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/conteudoCarimboDefinitivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextDataInicioProjeto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:hint="@string/registration_Data_inicio_furo"
                    android:inputType="date|datetime"
                    android:minHeight="48dp"
                    android:enabled="false"
                    app:layout_constraintTop_toBottomOf="@id/calendarioDataInicio"
                    app:layout_constraintStart_toEndOf="@id/guidelineStart"
                    app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                    />
                <ImageButton
                    android:id="@+id/calendarioDataInicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date"
                    app:layout_constraintTop_toBottomOf="@id/recyclerCarimboProjeto"
                    app:layout_constraintStart_toEndOf="@id/guidelineStart"
                    android:layout_margin="10dp"/>
                <Button
                    android:id="@+id/buttonGetLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/icon_pin"
                    android:text="@string/btn_capturar_endereco"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/recyclerCarimboProjeto"
                    app:layout_constraintTop_toBottomOf="@+id/editTextDataInicioProjeto" />

                <TextView
                    android:id="@+id/textWarning1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"
                    android:text="@string/msg_carimbo_automátizado"
                    android:textAlignment="center"
                    android:textColor="@color/color_primary_dark"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="120dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/icon_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textWarning1" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.04" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.94" />

                <ImageButton
                    android:id="@+id/imageButtonPhoto"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                    app:layout_constraintStart_toStartOf="@+id/imageProfile"
                    app:layout_constraintTop_toBottomOf="@+id/imageProfile"
                    app:srcCompat="@drawable/icon_photo" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCarimboProjeto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@+id/imageButtonPhoto"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>